message ConnectionInitiationMessage {
    enum Type {
        QUERY = 0;
        REQUEST = 1;
        CONNECT = 2;
    };

    required Type type = 1;
}

message Parameter {
    required string key = 1;
    optional string value = 2;
}

message ServiceDescription {
    required string name = 1;
    required string category = 2;
    required string type = 3;
    required string version = 4;
    required string location = 5;
    required string port = 6;
    repeated Parameter parameters = 7;
}

message SessionRequestMessage {
    repeated Parameter parameters = 1;
    required bytes identity = 2;
}

message SessionMessage {
    required uint32 sessionid = 1;
}

message SessionInitiationMessage {
    required uint32 sessionid = 1;
}
